eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: parathantl/proxy:latest
        ports:
        - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: products-app
spec:
 replicas: 1
 selector:
   matchLabels:
     app: products-app
 template:
   metadata:
     labels:
       app: products-app
   spec:
     containers:
     - name: products-app
       image: parathantl/products:latest
       ports:
       - containerPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: checkout-app
spec:
 replicas: 1
 selector:
   matchLabels:
     app: checkout-app
 template:
   metadata:
     labels:
       app: checkout-app
   spec:
     containers:
     - name: checkout-app
       image: deepikait19148632/checkout:latest
       ports:
       - containerPort: 3001

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: review-app
spec:
 replicas: 1
 selector:
   matchLabels:
     app: review-app
 template:
   metadata:
     labels:
       app: review-app
   spec:
     containers:
     - name: review-app
       image: it19116952/review:latest
       ports:
       - containerPort: 3002
