eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app-svc
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: products-app-svc
spec:
  selector:
    app: products-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: checkout-app-svc
spec:
  selector:
    app: checkout-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: review-app-svc
spec:
  selector:
    app: review-app
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3002
    targetPort: 3002
