eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ctse-demo-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "https://c21f4c77452a9fa2ff0c29b44dd21591.gr7.ap-south-1.eks.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-app-api-service
            port:
              number: 80
